--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/js-yaml": "^4.0.9",
+    "@types/mustache": "^4.2.6",
     "@types/node": "^24.10.0",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
@@ -50,6 +51,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.21.0",
     "dotenv": "^17.2.3",
+    "mustache": "^4.2.0",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
     "zod": "^4.1.12"
