--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -5,16 +5,16 @@
   "description": "{{description}}",
   "author": "{{author}}",
   "scripts": {
-    "account": "bun hardhat run scripts/listAccount.ts",
-    "chain": "bun hardhat node --network hardhat --no-deploy",
-    "compile": "bun hardhat compile",
-    "deploy": "bun hardhat deploy --network {{network}}",
-    "deploy:verify": "bun hardhat deploy --network {{network}} --verify",
-    "flatten": "bun hardhat flatten",
-    "fork": "MAINNET_FORKING_ENABLED=true bun hardhat node --network hardhat --no-deploy",
-    "generate": "bun hardhat run scripts/generateAccount.ts",
-    "test": "bun hardhat test --network hardhat",
-    "verify": "bun hardhat --network {{network}} etherscan-verify --solc-input"
+    "account": "yarn hardhat run scripts/listAccount.ts",
+    "chain": "yarn hardhat node --network hardhat --no-deploy",
+    "compile": "yarn hardhat compile",
+    "deploy": "yarn hardhat deploy --network {{network}}",
+    "deploy:verify": "yarn hardhat deploy --network {{network}} --verify",
+    "flatten": "yarn hardhat flatten",
+    "fork": "MAINNET_FORKING_ENABLED=true yarn hardhat node --network hardhat --no-deploy",
+    "generate": "yarn hardhat run scripts/generateAccount.ts",
+    "test": "yarn hardhat test --network hardhat",
+    "verify": "yarn hardhat --network {{network}} etherscan-verify --solc-input"
   },
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
