add dotenv support and fix deployment config
- add dotenv package and imports
- add explicit hardhat network config
- add environment variable fallbacks for RPC URLs
- improve comments for network account configuration

--- a/templates/basic/package.json
+++ b/templates/basic/package.json
@@ -28,6 +28,7 @@
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
     "chai": "^4.3.0",
+    "dotenv": "^16.0.0",
     "ethers": "^6.4.0",
     "hardhat": "^2.22.0",
     "hardhat-deploy": "^0.12.0",
